[package]
name = "authfix"
description = "Authfix adds an authentication layer to Actix Web"
authors = ["Stefan Simon <stefan.j.c.simon@gmail.com>"]
keywords = ["authentication", "session", "actix", "actix-web", "middleware", "auth", "web", "login", "user", "users"]
exclude = [".gitignore"]
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web="4.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"]}
actix-session = { version = "0.10", features = ["cookie-session"] }
futures = "0.3"
regex = "1.11"
urlencoding = "2.1"
thiserror = "2.0"
# used for public api like the trait `LoadUserService`
async-trait = "0.1.88"

# feature: authenticator
google-authenticator = { version = "0.4", optional = true }
qrcode-generator = { version = "5.0", optional = true }
rand = { version = "0.9", optional = true }
base32 = { version = "0.5", optional = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["cookies"]}
actix-session = { version = "0.10", features = ["cookie-session"]}
actix-rt = "2.10.0"
actix-test = "0.1.5"
resvg = "0.45"
rqrr = "0.9"
image = "0.25"
chrono = "0.4"
env_logger = "0.11"
lazy_static = "1.5.0"
authfix = { path = ".", features = ["authenticator", "mfa_send_code"] } 

[features]
authenticator = ["dep:google-authenticator", "dep:qrcode-generator", "dep:rand", "dep:base32"]
mfa_send_code = []