[package]
name = "authfix-test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["cookies"]}
actix-session = { version = "0.10", features = ["cookie-session"]}
actix-rt = "2.10.0"
serde = { version = "1.0", features = ["derive"]}
actix-test = "0.1.5"
resvg = "0.45"
rqrr = "0.9"
image = "0.25"
chrono = "0.4"
env_logger = "0.11"
lazy_static = "1.5.0"
authfix = { path = "..", features = ["authenticator", "mfa_send_code"] }

